--- a/ComputerUI/ClientApp/src/app/computer-management/computer-detail/computer-detail.component.html
+++ b/ComputerUI/ClientApp/src/app/computer-management/computer-detail/computer-detail.component.html
@@ -3,7 +3,7 @@
     {{ computer.configuracionName | uppercase }} Details
   </h2>
   <div>
-    <span>id: </span>{{computer.id}}
+    <span>id: </span>{{computer.computerId}}
   </div>
   <div>
     <label>
@@ -20,7 +20,7 @@
   <div>
     <label>
       memory:
-      <input [(ngModel)]="computer.memory" placeholder="memory">
+      <input [(ngModel)]="computer.memoryId" placeholder="memoryId">
     </label>
   </div>
   <div>
