--- a/ComputerUI/ClientApp/src/app/computer-management/computer-search/computer-search.component.html
+++ b/ComputerUI/ClientApp/src/app/computer-management/computer-search/computer-search.component.html
@@ -5,7 +5,7 @@
 
   <ul class="search-result">
     <li *ngFor="let computer of computers$ | async">
-      <a routerLink="../computers/detail/{{computer.id}}">
+      <a routerLink="../computers/detail/{{computer.computerId}}">
         {{computer.configuracionName}}
       </a>
     </li>
