--- a/ComputerUI/ClientApp/src/app/computer-management/dashboard/dashboard.component.html
+++ b/ComputerUI/ClientApp/src/app/computer-management/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <h3>Top Computers</h3>
 <div class="grid grid-pad">
-  <a *ngFor="let computer of computers" class="col-1-4" routerLink="../computers/detail/{{computer.id}}" >
+  <a *ngFor="let computer of computers" class="col-1-4" routerLink="../computers/detail/{{computer.computerId}}" >
     <div class="module compter">
       <h4>{{computer.configuracionName}}</h4>
     </div>
