--- a/ComputerUI/ClientApp/src/app/computer-management/computer-management.component.html
+++ b/ComputerUI/ClientApp/src/app/computer-management/computer-management.component.html
@@ -4,5 +4,18 @@
   <a routerLink="computers">Computers</a>
   <a routerLink="add-computer">Add Computer</a>
 </nav>
-<router-outlet></router-outlet>
-<app-messages></app-messages>
+
+<div class="row">
+  <router-outlet></router-outlet>
+</div>
+<div class="row">
+  <app-messages></app-messages>
+</div>
+   
+
+
+
+  
+
+
+
