--- a/ComputerUI/ClientApp/src/app/computer-management/add-computer/add-computer.component.css
+++ b/ComputerUI/ClientApp/src/app/computer-management/add-computer/add-computer.component.css
@@ -1,5 +1,5 @@
 /* Add Computer Component's private CSS styles */
-label {
+/*label {
   display: inline-block;
   width: 3em;
   margin: .5em 0;
@@ -8,6 +8,12 @@ label {
 }
 
 input {
+  height: 2em;
+  font-size: 1em;
+  padding-left: .4em;
+}
+
+.input {
   height: 2em;
   font-size: 1em;
   padding-left: .4em;
@@ -32,4 +38,4 @@ button {
     background-color: #eee;
     color: #ccc;
     cursor: auto;
-  }
+  }*/
