--- a/ComputerUI/ClientApp/src/app/computer-management/memory/memory.component.html
+++ b/ComputerUI/ClientApp/src/app/computer-management/memory/memory.component.html
@@ -1,3 +1,44 @@
-<p>
-  memory works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6">
+      <h2>Brian´s Computer Company : Memory Management</h2>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-sm-6">
+    <table id="memoryTable"
+           class="table table-bordered
+                 table-condensed table-striped">
+      <thead>
+        <tr>
+          <th>Edit</th>
+          <th>Brand</th>
+          <th>Size (GB)</th>
+          <th>Speed</th>
+          <th>Modified Date</th>
+          <th>Delete</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let memory of memorys">
+          <td>
+            <a routerLink="detail/{{memory.memoryId}}" class="btn btn-default">
+              <span class="glyphicon glyphicon-edit"></span>
+            </a>
+          </td>
+          <td>{{memory.brand}}</td>
+          <td>{{memory.sizeGB}} GB</td>
+          <td>{{memory.speed}}</td>
+          <td>{{memory.lastModified | date:"yyyy-MM-dd HH:mm:ss"}}</td>
+          <td>
+            <button class="btn btn-default" title="delete"
+                    (click)="delete(memory)">
+              <span class='glyphicon glyphicon-remove'></span>
+            </button>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
