--- a/ComputerUI/ClientApp/src/app/computer-management/messages/messages.component.html
+++ b/ComputerUI/ClientApp/src/app/computer-management/messages/messages.component.html
@@ -5,6 +5,13 @@
           (click)="messageService.clear()">
     clear
   </button>
-  <div *ngFor='let message of messageService.messages'> {{message}} </div>
-
+  <div *ngFor='let message of messageService.messages'>
+    <div class="alert alert-{{message.messageType}}">
+      
+      <strong>{{message.messageType}}!</strong> {{message.messageText}}<button class="close" data-dismiss="alert" aria-label="close" (click)="delete(message)">
+  <!--<span class='glyphicon glyphicon-remove'></span>-->&times;
+</button>
+    </div>
+    
 </div>
+  </div>
