--- a/ComputerUI/ClientApp/src/app/app.component.html
+++ b/ComputerUI/ClientApp/src/app/app.component.html
@@ -3,8 +3,12 @@
     <div class='col-sm-3'>
       <app-nav-menu></app-nav-menu>
     </div>
-    <div class='col-sm-9 body-content'>
-      <router-outlet></router-outlet>
+    <div class="content-wrapper">
+      <div class='col-sm-9 body-content'>
+        <router-outlet></router-outlet>
+
+      </div>
     </div>
+    <!--<app-footer></app-footer>-->
   </div>
-</div>
+  </div>
