--- a/ComputerUI/ClientApp/src/app/computer-management/computer-management.component.html
+++ b/ComputerUI/ClientApp/src/app/computer-management/computer-management.component.html
@@ -8,9 +8,9 @@
 <div class="row">
   <router-outlet></router-outlet>
 </div>
-<div class="row">
+<!--<div class="row">
   <app-messages></app-messages>
-</div>
+</div>-->
    
 
 
