--- a/ComputerUI/ClientApp/src/app/computer-management/computer-management.component.html
+++ b/ComputerUI/ClientApp/src/app/computer-management/computer-management.component.html
@@ -1,21 +1,5 @@
-<h1>{{title}}</h1>
-<nav>
-  <a routerLink="dashboard">Dashboard</a>
-  <a routerLink="computers">Computers</a>
-  <a routerLink="add-computer">Add Computer</a>
-</nav>
-
-<div class="row">
+<app-nav-bar></app-nav-bar>
+<div class="container-fluid">
   <router-outlet></router-outlet>
 </div>
-<!--<div class="row">
-  <app-messages></app-messages>
-</div>-->
-   
-
-
-
-  
-
-
 
