--- a/ComputerUI/ClientApp/src/app/computer-management/memory/add-memory/add-memory.component.html
+++ b/ComputerUI/ClientApp/src/app/computer-management/memory/add-memory/add-memory.component.html
@@ -1,47 +1,1 @@
-<div *ngIf="model">
-
-  <div class="container">
-
-    <h1>Memory Form</h1>
-
-    <form (ngSubmit)="onSubmit()" #memoryForm="ngForm">
-
-      {{diagnostic}}
-
-      <div class="form-group">
-        <label for="brand">Brand</label>
-        <input type="text" class="form-control" id="brand" required
-               [(ngModel)]="model.brand" name="brand">
-        <!--<div [hidden]="configuracionName.valid || configuracionName.pristine"
-             class="alert alert-danger">
-          configuracionName is required
-        </div>-->
-      </div>
-
-      <div class="form-group">
-        <label for="sizeGB">Size (GB)</label>
-        <input type="text" class="form-control" id="sizeGB" required
-               [(ngModel)]="model.sizeGB" name="sizeGB">
-        <!--<div [hidden]="processor.valid || processor.pristine"
-             class="alert alert-danger">
-          processor is required
-        </div>-->
-      </div>
-
-      <div class="form-group">
-        <label for="speed">Speed</label>
-        <input type="text" class="form-control" id="speed" required
-               [(ngModel)]="model.speed" name="speed">
-        <!--<div [hidden]="hardDrive.valid || hardDrive.pristine"
-             class="alert alert-danger">
-          hardDrive is required
-        </div>-->
-      </div>
-
-      <button type="submit" class="btn btn-success" [disabled]="!memoryForm.form.valid">Save</button>
-      <button (click)="goBack()">go back</button>
-
-    </form>
-
-  </div>
-</div>
+<app-memory-form [model]="memory"></app-memory-form>
