--- a/ComputerUI/ClientApp/src/app/computer-management/dashboard/dashboard.component.html
+++ b/ComputerUI/ClientApp/src/app/computer-management/dashboard/dashboard.component.html
@@ -1,10 +1,20 @@
-<h3>Top Computers</h3>
-<div class="grid grid-pad">
-  <a *ngFor="let computer of computers" class="col-1-4" routerLink="../computers/detail/{{computer.computerId}}" >
-    <div class="module compter">
-      <h4>{{computer.configuracionName}}</h4>
-    </div>
-  </a>
+<div class="text-center">
+  <h2>Featured Computers</h2>
 </div>
-<app-computer-search></app-computer-search>
+<div class="container">
+  <div class="row stylish-panel">
+    <div class="col-md-4" *ngFor="let computer of computers">
+      <div>
+        <h2>{{computer.configuracionName}}</h2>
+        <p>
+          Processor: {{computer.processor}}<br />
+          Memory: {{computer.memory.brand}} : {{computer.memory.sizeGb}}GB {{computer.memory.speed}}<br />
+          HardDrive: {{computer.hardDrive}}
+        </p>
+        <a routerLink="../computer/detail/{{computer.computerId}}" class="btn btn-primary" title="See more">Full Specs »</a>
+      </div>
+    </div>
+  </div>
+</div>
+<!--<app-computer-search></app-computer-search>-->
 
