--- a/ComputerUI/ClientApp/src/app/app.component.html
+++ b/ComputerUI/ClientApp/src/app/app.component.html
@@ -1,4 +1,4 @@
-<div class='container-fluid'>
+<!--<div class='container-fluid'>
   <div class='row'>
     <div class='col-sm-3'>
       <app-nav-menu></app-nav-menu>
@@ -8,7 +8,22 @@
         <router-outlet></router-outlet>
 
       </div>
-    </div>
-    <!--<app-footer></app-footer>-->
+    </div>-->
+<!--<app-footer></app-footer>-->
+<!--</div>
+</div>-->
+
+<div class="content-wrapper">
+  <app-nav-menu></app-nav-menu>
+  <div class="container">
+    <router-outlet></router-outlet>
   </div>
-  </div>
+</div>
+
+  <!--<nav aria-label="breadcrumb">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item"><a href="#">Home</a></li>
+      <li class="breadcrumb-item"><a href="#">Library</a></li>
+      <li class="breadcrumb-item active" aria-current="page">Data</li>
+    </ol>
+  </nav>-->
